clarify the project